# explorer-c-

./: README.md  README_CMAKE.md
.github/workflows/: ci.yaml
Task1/: .gitignore  CMakeLists.txt  README.md
Task1/src/: main.cpp
Task1/src/explorer/: explorer.cpp  explorer.hpp
Task1/src/settings_manager/: settings_manager.cpp  settings_manager.hpp
Task1/src/singleton/: singleton_main.cpp  singleton_main.hpp
Task1/src/task/: audio_task.hpp  task_base.hpp
Task1/tests/: run_tests.sh
